--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 a {
     text-decoration: none;
     color: black;
@@ -9,6 +10,7 @@ a {
   
   body {
     font-size: 15px;
+    font-family: sans-serif;
   }
   
   .topnav {
@@ -41,11 +43,13 @@ a {
   img {
     display: flex;
     height: 150px;
+    justify-content: center;
+    margin: 0 auto;
   }
   
   .search_bar {
     display: flex;
-    width: 650px;
+    width: 600px;
     height: 40px;
     border-radius: 10px;
     border: 1px solid #d3d3d3;
@@ -63,35 +67,49 @@ a {
   }
   
   .google_search {
-    margin-top: 15px;
-    height: 40px;
-    padding: 10px;
-    margin-right: 10px;
-    border-radius: 10px;
-    border: 1px solid #d3d3d3;  
-  }
-  
-  .feeling_lucky {
-    margin-top: 15px;
-    height: 40px;
-    padding: 10px;
-    margin-right: 10px;
-    border-radius: 10px;
-    border: 1px solid #d3d3d3;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
+    user-select: none; 
   }
   
   .google_search:hover {
-    background-color: lightgrey;
+    border: 1px;
+    box-shadow: 0 4px 10px lightgrey;
+  }
+  
+  .feeling_lucky {
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
+    user-select: none;
   }
   
   .feeling_lucky:hover {
-    background-color: lightgrey;
+    border: 1px;
+    box-shadow: 0 4px 10px lightgrey;
   }
   
   .language {
     display: flex;
     justify-content: center;
     padding: 25px;
+  }
+  
+  .language a {
+    color: #b19cd9;
+  
   }
   
   .location {
@@ -104,6 +122,12 @@ a {
     font-size: 17px;
     padding-left: 10px;
     padding-top: 10px;
+  }
+  
+  footer {
+    background-color: #f1f1f1;
+    width: auto;
+    margin: -10px;
   }
   
   .bottom {
@@ -132,4 +156,3 @@ a {
     font-family: sans-serif;
     margin: 0 5px;
   }
-  
