this is an update to style.css

--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ a {
   }
   
   body {
-    font-size: 15px;
-    font-family: sans-serif;
+    font-size: 14px;
+    font-family: arial sans-serif;
   }
   
   .topnav {
